1.添加‘创建的工作流’模块 2.把设置状态功能调整到右侧边栏顶部

--- a/locale/zh_Hans/translations.json
+++ b/locale/zh_Hans/translations.json
@@ -1391,7 +1391,7 @@
   "Send direct message new": "快捷私信",
   "View direct messages new": "查看私信",
   "View messages sent new": "历史发布",
-  "Copy mention syntax new": "复制@文本",
+  "Copy mention syntax new": "复制@",
   "All public streams in organization": "组织中的所有公开频道",
   "direct messages": "私信",
   "starred messages": "星标消息",
