个人详情弹窗修改

--- a/locale/zh_Hans/translations.json
+++ b/locale/zh_Hans/translations.json
@@ -542,6 +542,7 @@
   "High contrast mode": "高对比度模式",
   "Hint": "提示",
   "Hint (up to 80 characters)": "提示(到达80个字符)",
+  "How would you like to invite users?": "请选择用户邀请方式",
   "Humans": "人类",
   "Idle": "空闲",
   "If you don't know your password, you can <z-link>reset it</z-link>.": "如果您不记得密码，可以通过<z-link>重置密码</z-link>来找回账号访问权限。",
@@ -762,8 +763,8 @@
   "No streams": "没有频道",
   "No topics are marked as resolved.": "没有主题被标记为已解决。",
   "No topics match your current filter.": "没有主题符合您当前的过滤条件。",
-  "No user group subscriptions.": "没有用户组订阅。",
-  "No user groups": "没有用户组",
+  "No user group subscriptions.": "暂无团队订阅。",
+  "No user groups": "暂无团队",
   "No user to subscribe.": "没有用户订阅。",
   "No users match your current filter.": "没有匹配到用户在你的筛选器中。",
   "No, I'll catch up.": "否",
@@ -952,6 +953,7 @@
   "Select emoji": "选择表情符号",
   "Select language": "选择语言",
   "Send": "发送",
+  "Send an email": "通过邮件邀请",
   "Send automated notice to new topic": "发送自动提醒到新话题",
   "Send automated notice to old topic": "发送自动提醒到旧话题",
   "Send digest emails when I'm away": "当我离线时发送摘要邮件",
@@ -1180,7 +1182,7 @@
   "User group name": "用户组名称",
   "User group settings": "用户组设置",
   "User group successfully created!": "用户组创建成功！",
-  "User groups": "用户组",
+  "User groups": "所属团队",
   "User groups allow you to <z-link>mention</z-link> multiple users at once. When you mention a user group, everyone in the group is notified as if they were individually mentioned.": "用户组允许您<z-link>提到</z-link>多个用户一次。当您提及某个用户组时，该组中的每个人都会收到通知，就像他们被单独提及一样。",
   "User identity": "用户标识",
   "User is already not subscribed.": "用户没有订阅",
@@ -1288,7 +1290,7 @@
   "You cannot send messages to deactivated users.": "您不能向停用的用户发送消息。",
   "You do not have permission to add other users to streams in this organization.": "您没有权限向此组织的流中添加其他用户。",
   "You do not have permission to move some of the messages in this topic. Contact a moderator to move all messages.": "您没有权限移动此主题中的某些消息。请联系管理员以移动所有消息。",
-  "You do not have permission to post in this stream.": "您没有权限在此流中发布内容。",
+  "You do not have permission to post in this stream.": "您没有权限在此团队中发布内容。",
   "You do not have permission to resolve topics with messages older than {N, plural, one {# day} other {# days}} in this organization.": "您没有权限在此组织中解决超过 {N, plural, one {# day} other {# days}} 的帖子。",
   "You do not have permission to resolve topics with messages older than {N, plural, one {# hour} other {# hours}} in this organization.": "您没有权限在此组织中解决超过 {N, plural, one {# hour} other {# hours}} 的帖子。",
   "You do not have permission to resolve topics with messages older than {N, plural, one {# minute} other {# minutes}} in this organization.": "您没有权限在此组织中解决超过 {N, plural, one {# minute} other {# minutes}} 的帖子。",
