feat(locale): 修改消息类别中文翻译
- 将 "All messages" 从 "所有消息" 修改为 "推荐热点"
- 将 "All messages including muted streams" 从 "所有消息，包括静音频道" 修改为 "推荐热点，包括静音频道"

--- a/locale/zh_Hans/translations.json
+++ b/locale/zh_Hans/translations.json
@@ -124,8 +124,8 @@
   "Alerted messages": "关注的消息",
   "All": "所有",
   "All direct messages": "所有私聊消息",
-  "All messages": "所有消息",
-  "All messages including muted streams": "所有消息，包括静音频道",
+  "All messages": "推荐热点",
+  "All messages including muted streams": "推荐热点，包括静音频道",
   "All streams": "所有频道",
   "All time": "所有时间",
   "All unreads": "所有未读消息",
